llvm/test/tools/llubi/load_noundef_ub_poison_padding.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

define void @main() {
  %p = alloca i8
  store <2 x i4> <i4 1, i4 poison>, ptr %p
  %res = load i4, ptr %p, !noundef !{}
  ret void
}
; CHECK: Entering function: main
; CHECK-NEXT:   %p = alloca i8, align 1 => ptr 0x8 [p]
; CHECK-NEXT:   store <2 x i4> <i4 1, i4 poison>, ptr %p, align 1
; CHECK-NEXT: Stacktrace:
; CHECK-NEXT: #0   %res = load i4, ptr %p, align 1, !noundef !0 at @main
; CHECK-NEXT: Immediate UB detected: The value loaded contains undefined bits.
; CHECK-NEXT: error: Execution of function 'main' failed.
